--- a/packages/nestjs-graphql-typeorm-dataloader/package.json
+++ b/packages/nestjs-graphql-typeorm-dataloader/package.json
@@ -35,8 +35,8 @@
     ]
   },
   "peerDependencies": {
-    "@nestjs/common": ">= 8 < 10",
-    "@nestjs/core": ">= 8 < 10",
+    "@nestjs/common": ">= 8",
+    "@nestjs/core": ">= 8",
     "rxjs": ">= 7 < 8"
   },
   "dependencies": {
