--- a/packages/nestjs-util-microservices/package.json
+++ b/packages/nestjs-util-microservices/package.json
@@ -32,9 +32,9 @@
     ]
   },
   "peerDependencies": {
-    "@nestjs/common": ">= 8 < 10",
-    "@nestjs/core": ">= 8 < 10",
-    "@nestjs/microservices": ">= 8 < 10",
+    "@nestjs/common": ">= 8",
+    "@nestjs/core": ">= 8",
+    "@nestjs/microservices": ">= 8",
     "@webundsoehne/nestjs-util": ">= 5",
     "rxjs": ">= 7 < 8"
   },
