fix: implement the bugs discussed on the telko
- fixes issue with backend database both generating mongoose and typeorm
folders
- adds missing dependency mongo-migrate
- add local configuration files to ignore
- update docker database containers to have mock databases already
- fix issue with default mongodb entity

--- a/packages/brownie/templates/containers/db-postgresql/env.yml
+++ b/packages/brownie/templates/containers/db-postgresql/env.yml
@@ -1,4 +1,4 @@
 POSTGRES_USER: user
 POSTGRES_PASSWORD: secret
-POSTGRES_INITDB_MULTIPLE: db
+POSTGRES_INITDB_MULTIPLE: db db_mock
 PGDATA: /var/lib/postgresql/data
