fix: update templates to be strings since it is inside docker-compose

--- a/packages/brownie/templates/containers/nx/env.yml
+++ b/packages/brownie/templates/containers/nx/env.yml
@@ -1,5 +1,5 @@
 PACKAGE_MANAGER: npm
-DEFAULTS_LOGS: true
+DEFAULTS_LOGS: 'true'
 DEFAULTS_COMMAND: npm run start
 SERVICE_0_CWD: .
-PROXY_WORKSPACE_ONLY: true
+PROXY_WORKSPACE_ONLY: 'true'
