fix: update default ci configuration

--- a/packages/nx-workspace/src/schematics/workspace/files/.gitlab-ci.yml
+++ b/packages/nx-workspace/src/schematics/workspace/files/.gitlab-ci.yml
@@ -1,13 +1,22 @@
 ---
 variables:
   NODE_VERSION: 18-alpine
-  # environment variable files that needs to be injected for the frontend build
-  NODE_BUILD_ENVIRONMENT_FILES: ''
+  ## NODE OPTIONS
+  # install: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#install
+  # build: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#build
+  # lint: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#run
+  # test: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#run
+  ## BUILD TIME ENVIRONMENT VARIABLES FOR MOSTLY FRONTEND APPLICATIONS
+  # ENVIRONMENT_ENABLE: 'true'
+  # please read through the readme for additional information: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/select-env
+  ## DOCKER OPTIONS
+  # https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/docker
 
 .docker-common:
   stage: docker
   trigger:
     include:
+      # https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/blob/main/templates/docker-build-with-artifacts.gitlab-ci.yml
       - project: bdsm/gitlab-pipes
         file: /templates/docker-build-with-artifacts.gitlab-ci.yml
         ref: main
@@ -19,6 +28,7 @@ stages:
   - docker
 
 include:
+  # https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/blob/main/templates/node-nx.gitlab-ci.yml
   - project: bdsm/gitlab-pipes
     file: /templates/node-nx.gitlab-ci.yml
     ref: main
