--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: node:18-alpine
-
 stages:
   - install
   - build
@@ -12,35 +10,15 @@ cache:
     - node_modules/
     - packages/*/node_modules
 
-install:
-  stage: install
-  script:
-    - yarn --frozen-lockfile
-  artifacts:
-    paths:
-      - node_modules/
-      - packages/*/node_modules
-    expire_in: 30 minutes
-  tags:
-    - node
+variables:
+  NODE_VERSION: 18-alpine
+  PACKAGE_MANAGER: yarn
 
-lint:
-  stage: build
-  script:
-    - yarn lint:check
-  tags:
-    - node
-
-build:
-  stage: build
-  script:
-    - yarn build
-  artifacts:
-    paths:
-      - dist/
-      - packages/*/dist
-  tags:
-    - node
+include:
+  - project: bdsm/gitlab-pipes
+    file: /templates/node.gitlab-ci.yml
+  - project: bdsm/gitlab-pipes
+    file: /templates/semantic-release.gitlab-ci.yml
 
 docs:
   stage: docs
@@ -61,23 +39,6 @@ docs:
     - node
 
 publish:
-  stage: publish
-  image: cenk1cenk2/pipe-semantic-release:latest
   variables:
-    GIT_AUTHOR_NAME: semantic-release [bot]
-    GIT_AUTHOR_EMAIL: $BANDAID_API_USER_EMAIL
-    GIT_COMMITTER_NAME: semantic-release [bot]
-    GIT_COMMITTER_EMAIL: $BANDAID_API_USER_EMAIL
     NPM_LOGIN: $NPM_LOGIN
     RUN_MULTI: 'true'
-  script:
-    - pipe
-  only:
-    - master
-    - next
-    - next-major
-    - beta
-    - rc
-    - alpha
-  tags:
-    - docker
