ci: update invalid variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ cache:
 
 variables:
   NODE_VERSION: 18-alpine
-  PACKAGE_MANAGER: yarn
+  NODE_PACKAGE_MANAGER: yarn
 
 include:
   - project: bdsm/gitlab-pipes
