fix: update pipe command with new method

--- a/packages/nx-workspace/src/schematics/workspace/files/.gitlab-ci.yml
+++ b/packages/nx-workspace/src/schematics/workspace/files/.gitlab-ci.yml
@@ -40,7 +40,7 @@ include:
 #   extends: .docker-common
 #   variables:
 #     DOCKERFILE_CONTEXT: ./dist/apps/app
-#     DOCKER_IMAGE_NAME: app
+#     DOCKER_IMAGE_INTERNAL_NAME: app
 #   only:
 #     changes:
 #       - .gitlab-ci.yml
