--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -51,7 +51,8 @@
     "class-transformer": ">= 0.4.0",
     "class-validator": ">= 0.13.0",
     "express": ">= 4",
-    "fastify": ">= 3"
+    "fastify": ">= 3",
+    "rxjs": ">= 7 < 8"
   },
   "peerDependenciesMeta": {
     "fastify": {
