--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -49,7 +49,8 @@
     "class-validator": ">= 0.13.0",
     "reflect-metadata": "^0.1.13",
     "express": ">= 4",
-    "fastify": ">= 3"
+    "fastify": ">= 3",
+    "nestjs-cls": ">= 4"
   },
   "peerDependenciesMeta": {
     "fastify": {
@@ -59,6 +60,9 @@
       "optional": true
     },
     "@nestjs/graphql": {
+      "optional": true
+    },
+    "nestjs-cls": {
       "optional": true
     }
   },
@@ -73,7 +77,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
-    "fastify": "^4.15.0"
+    "fastify": "^4.15.0",
+    "nestjs-cls": "^4.3.0"
   },
   "engines": {
     "node": ">= 16"
