chore(nx-executors): flat packaging
Build package from the `dist` folder to get a flat structure to import plugins via `@webundsoehne/nx-executors/plugin/tsc` instead of having `dist` in the path.

--- a/packages/nx-executors/package.json
+++ b/packages/nx-executors/package.json
@@ -5,13 +5,14 @@
   "description": "Custom nx executors.",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "build": "tsup-node",
+    "dev:pack": "",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/"
   },
