--- a/packages/nx-executors/package.json
+++ b/packages/nx-executors/package.json
@@ -5,8 +5,8 @@
   "description": "Custom nx executors.",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
