--- a/packages/nx-executors/tsconfig.build.json
+++ b/packages/nx-executors/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"],
   "compilerOptions": {
-    "rootDir": ".",
+    "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
     "sourceMap": false
