feat(nx-nest): resource generation
Generate component resources. Clean-up utils. Custom dynamic prompts for resource generation.

--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -27,7 +27,8 @@
     ]
   },
   "peerDependencies": {
-    "nx": ">= 17 <= 20"
+    "nx": ">= 17 <= 20",
+    "enquirer": ">= 2.3"
   },
   "dependencies": {
     "@nx/devkit": "^19.3.0",
