--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -11,6 +11,9 @@
     "access": "public"
   },
   "generators": "./generators.json",
+  "nx-migrations": {
+    "migrations": "./migrations.json"
+  },
   "scripts": {
     "build": "tsup-node",
     "dev:start": "tsup-node --watch",
@@ -27,20 +30,20 @@
     ]
   },
   "peerDependencies": {
-    "nx": ">= 19",
+    "nx": ">= 20",
     "enquirer": ">= 2.3"
   },
   "dependencies": {
-    "@nx/devkit": "^19.8.0",
-    "@nx/js": "^19.8.0",
-    "@nx/workspace": "^19.8.0",
+    "@nx/devkit": "^20.0.0",
+    "@nx/js": "^20.0.0",
+    "@nx/workspace": "^20.0.0",
     "yaml": "^2.5.1",
     "ts-morph": "^23.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "enquirer": "^2.4.1",
-    "nx": "^19.8.0"
+    "nx": "^20.0.0"
   },
   "engines": {
     "node": ">= 18"
