--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ cache:
 
 variables:
   NODE_VERSION: 20-alpine
-  NODE_PACKAGE_MANAGER: yarn
+  NODE_PACKAGE_MANAGER: npm
 
 include:
   - project: bdsm/gitlab-pipes
